--- a/app/src/main/res/drawable/ic_class.xml
+++ b/app/src/main/res/drawable/ic_class.xml
@@ -3,7 +3,19 @@
     android:height="24dp"
     android:viewportWidth="24"
     android:viewportHeight="24">
+
+    <!-- Card/Badge outline -->
     <path
         android:fillColor="@android:color/white"
-        android:pathData="M18,2H6c-1.1,0 -2,0.9 -2,2v16c0,1.1 0.9,2 2,2h12c1.1,0 2,-0.9 2,-2V4c0,-1.1 -0.9,-2 -2,-2zM6,4h5v8l-2.5,-1.5L6,12V4z"/>
+        android:pathData="M20,4H4C2.9,4 2,4.9 2,6v12c0,1.1 0.9,2 2,2h16c1.1,0 2,-0.9 2,-2V6C22,4.9 21.1,4 20,4zM20,18H4V6h16V18z"/>
+
+    <!-- Large "A" or grade indicator -->
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M9,9h2l3,6h-2l-0.5,-1.5h-3L8,15H6L9,9zM10.25,12h1.5l-0.75,-2.25L10.25,12z"/>
+
+    <!-- Lines for class info -->
+    <path
+        android:fillColor="@android:color/white"
+        android:pathData="M14,10h5v1h-5z M14,12h4v1h-4z M14,14h3v1h-3z"/>
 </vector>
