--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -131,6 +131,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
+                    android:elevation="12dp"
                     android:padding="20dp"
                     android:gravity="center">
 
@@ -181,6 +182,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="20dp"
+                    android:elevation="12dp"
                     android:gravity="center">
 
                     <ImageView
@@ -229,6 +231,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="20dp"
+                    android:elevation="12dp"
                     android:gravity="center">
 
                     <ImageView
@@ -277,6 +280,7 @@
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
                     android:padding="20dp"
+                    android:elevation="12dp"
                     android:gravity="center">
 
                     <ImageView
